# azure-ai-redteam-eval

./: .env.example  .gitignore  Makefile  README.md  evaluation_baseline.json  pyproject.toml  redteam_report.md  redteam_sdk_result.json  regression_comparison.md  requirements-app.txt  requirements.txt  results.json  startup.sh  tasks.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  evaluate.yml  redteam.yml
docs/: architecture.md  ce-cm-lifecycle.md  infra.md  talk-script.md
fallback/: agent_demo_output.txt  redteam_report.md  regression_comparison.md
infra/: main.bicep
infra/modules/: ai-foundry.bicep  alerts.bicep  app-service.bicep  key-vault.bicep  managed-identity.bicep  monitoring.bicep  openai.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
scripts/: setup-azure.ps1  setup-azure.sh  validate_telemetry.py
src/: __init__.py  app.py  config.py
src/agents/: __init__.py  orchestrator.py  planner_agent.py  retrieval_agent.py  safety_agent.py
src/agents/plugins/: __init__.py  eval_plugin.py  search_plugin.py
src/continuous_evaluation/: __init__.py  evaluators.py  metrics.py  regression_check.py  retry.py  run_evaluation.py  run_pr_evaluation.py  score_tracker.py  thresholds.py
src/continuous_evaluation/datasets/: adversarial_prompts.jsonl  eval_golden.jsonl
src/continuous_monitoring/: __init__.py  alert_rules.py  eval_metrics_exporter.py  telemetry.py
src/continuous_monitoring/dashboards/: ce_cm_dashboard.json
src/redteam/: __init__.py  attack_strategies.py  report.py  run_redteam.py
src/static/: index.html
tests/integration/: test_agent_flow.py
tests/unit/: test_evaluators.py  test_regression_check.py  test_thresholds.py
